# main_drone_software

./: .gitignore  README.md  detection_params.npy  nohup.out  odometry_data_2025:01:28-11:15:22_to_2025:01:28-11:15:26.csv  odometry_data_2025:01:29-08:47:40_to_2025:01:29-08:48:02.csv  odometry_data_2025:01:29-08:51:05_to_2025:01:29-08:59:39.csv
flight_logs/: flight_odom_20250224_092814.npy  flight_odom_20250224_093821.csv  flight_odom_20250303_090142.npy  flight_odom_20250303_091230.csv  flight_odom_20250303_091619.csv  flight_odom_20250303_092728.csv  flight_odom_20250304_094545.csv  flight_odom_20250304_094919.csv  flight_odom_20250307_092504.csv  flight_odom_20250307_093346.csv.npy  flight_odom_20250307_093903.npy  flight_odom_20250307_094209.npy  high_flight_odom_20250310_095442.npy  high_flight_odom_20250311_093803.npy  high_flight_odom_20250311_094500.npy  low_flight_odom_20250310_091926.npy  low_flight_odom_20250310_092133.npy  low_flight_odom_20250310_092159.npy  low_therm_images_20250310_091926.npy  therm_images_20250224_092814.npy  therm_images_20250224_093821.npy  therm_images_20250303_090142.npy  therm_images_20250303_091131.npy  therm_images_20250303_091230.npy  therm_images_20250303_091619.npy  therm_images_20250303_092136.npy  therm_images_20250303_092728.npy  therm_images_20250304_094545.npy  therm_images_20250304_094919.npy  therm_images_20250307_092504.npy  (+1 more)
install/: setup.bash  (+4 more)
src/custom_msgs/: CMakeLists.txt
src/custom_msgs/msg/: CustomOdometryMsg.msg
src/img_capture/: CMakeLists.txt
src/img_capture/launch/: image.launch.py  new_img_capture.launch.py
src/img_capture/scripts/: drop_mech.py  flight_logger.py  high_alt_filter.py  hot_spot_viewer.py  kmeans.py  live_feedback.py  low_alt_filter.py  low_alt_thermal.py  odometry_publisher.py  save_log_test.py  sim_flight_publisher.py  sim_odometry_publisher.py  thermal_subscriber.py
src/img_capture/src/: seekcamera_publisher.cpp
(+96 files in other folders)
